--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,9 @@
   body {
     @apply bg-theme-900;
   }
+  span {
+    color: theme('colors-theme-800');
+  }
 }
 
 @layer utilities {
@@ -44,21 +47,6 @@
   .neon-shadow {
     box-shadow: 0 0 1px #fff, 0 0 2px #fff, 0 0 10px #fff, 0 0 16px #fff,
       0 0 18px #fff;
-  }
-
-  .neon-shadow-soft {
-    box-shadow: 0 0 1px #fff, 0 0 8px #0ba9ca, 0 0 12px #0ba9ca,
-      0 0 16px #0ba9ca;
-  }
-
-  .neon-shadow-soft-darker {
-    box-shadow: 0 0 1px #0ba9ca, 0 0 8px #0097a7, 0 0 12px #0097a7,
-      0 0 16px #0097a7;
-  }
-
-  .neon-shadow-soft-inset {
-    box-shadow: inset 0 0 1px #fff, 0 0 8px #0ba9ca, inset 0 0 12px #0ba9ca,
-      inset 0 0 16px #0ba9ca;
   }
 
   /* Special FX */
@@ -110,81 +98,24 @@
     touch-action: pan-y pinch-zoom;
   }
 
-  /* Carousel */
-  .carousel-content {
-    display: flex;
-    column-gap: 1rem;
-    padding: 0 0.5rem;
-    margin: auto 0.5rem;
-    transition: all 250ms linear;
-    -ms-overflow-style: none; /* hide scrollbar in IE and Edge */
-    scrollbar-width: none; /* hide scrollbar in Firefox */
-  }
-
-  /* hide scrollbar in webkit browser */
-  .carousel-content::-webkit-scrollbar,
-  .carousel-content::-webkit-scrollbar {
-    display: none;
-  }
-
-  .carousel-content > * {
-    width: 100%;
-    flex-shrink: 0;
-    flex-grow: 1;
-  }
-
-  .carousel-content.show-2 > * {
-    width: 50%;
-  }
-
-  .carousel-content.show-3 > * {
-    width: calc(100% / 3);
-  }
-
-  .carousel-content.show-4 > * {
-    width: calc(100% / 4);
-  }
-
-  .carousel-content.show-5 > * {
-    width: calc(100% / 5);
-  }
-
-  .carousel-content.show-6 > * {
-    width: calc(100% / 6);
-  }
-
-  .carousel-content.show-7 > * {
-    width: calc(100% / 7);
-  }
-
-  .left-arrow,
-  .right-arrow {
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 48px;
-    height: 48px;
-    border-radius: 24px;
-    background-color: white;
-    border: 1px solid #ddd;
-  }
-
-  .left-arrow {
-    left: 24px;
-  }
-
-  .right-arrow {
-    right: 24px;
-  }
+  /* CAROUSEL */
 
   .movie {
-    border: 1px solid black;
+    border: 1px solid theme('colors.theme.900');
     border-radius: 0.375rem;
   }
 
   .hover-movie {
     transform: scale(1.05);
-    border: 1px solid rgba(255, 255, 255, 0.852);
+    box-shadow: 0px 0px 5px 2px rgba(255, 255, 255, 1);
+  }
+
+  .scroll-button {
+    @apply bg-white absolute top-1/2 transform -translate-y-1/2 text-3xl flex justify-center content-center px-2 py-5 bg-theme-400 opacity-60 text-black;
+    border: 1px rgba(0, 0, 0, 0.616) solid;
+  }
+
+  .scroll-button:hover {
+    @apply opacity-100 duration-1000;
   }
 }
