--- a/app/globals.css
+++ b/app/globals.css
@@ -120,4 +120,9 @@
   .dayListItem {
     @apply inline-block p-4 border-b-2 border-transparent rounded-t-lg hover:text-gray-600 hover:border-gray-300 dark:hover:text-gray-300 duration-500;
   }
+
+  .active {
+    border-bottom: 1px white solid;
+    color: white;
+  }
 }
