fix moviecard mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -151,3 +151,13 @@
     opacity: 1;
   }
 }
+
+/* TEST */
+
+.gradient-bg {
+  background: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 1) 60%,
+    rgba(0, 0, 0, 0)
+  );
+}
